--- a/lk.html
+++ b/lk.html
@@ -4,34 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Flexbox Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="lk.css">
 </head>
 <body>
-    <header class="header">
-        <h1>Welcome to My Flexbox Page</h1>
-    </header>
-    <nav class="navbar">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Contact</a>
-    </nav>
+    
     <main class="main-content">
         <section class="content-box">
-            <h2>Content Box 1</h2>
-            <p>This is some content.</p>
+            <h2>Box 1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </section>
         <section class="content-box">
-            <h2>Content Box 2</h2>
-            <p>This is some more content.</p>
+            <h2>Box 2</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
         </section>
         <section class="content-box">
-            <h2>Content Box 3</h2>
-            <p>This is even more content.</p>
+            <h2>Box 3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </section>
     </main>
-    <footer class="footer">
-        <p>&copy; 2024 My Website</p>
-    </footer>
 </body>
 </html>
