--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Flexbox Page</title>
-    <link rel="stylesheet" href="lk.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <main class="main-content">
-        <section class="content-box">
+        <section class="flexbox">
             <h2>Box 1</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </section>
-        <section class="content-box">
+        <section class="flexbox">
             <h2>Box 2</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
         </section>
-        <section class="content-box">
+        <section class="flexbox">
             <h2>Box 3</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </section>
